decoupling import candidate from resource